[package]
name = "pinko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
panic-probe = {version="0.3", features = ["print-defmt"] }
rp-pico = "0.8.0"
defmt = "0.3"
defmt-rtt = "0.3"
epd-waveshare = {version="0.5.0"}
#epd-waveshare = {version="0.5.0", default-features = false, features=["graphics"] }
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.2"
fugit = "0.3.6"
#rp2040-hal = "0.6.1"
embedded-hal = "0.2.7"

